--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
       <hr class="featurette-divider">
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2014 <a href="https://plus.google.com/+%E9%99%B3%E5%BD%A5%E9%BD%8AMark">Yen-chi Chen</a></p>
       </footer>
-    </div><!-- /.container -->
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
