--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div class="navbar navbar-static-top" role="navigation" style="opacity: 0.65; background-color: white;">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
