add og property

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="尋云手語社手語之夜 驀然回手 10月8日 就在視小">
     <meta name="author" content="Yen-chi Chen">
+    <meta property="og:description" content="10月8日 視聽小劇場 歡迎你" />
     <title>驀然回手 - 尋云手語社 手語之夜</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <!--[if lt IE 9]>
